[package]
name = "fermi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for testing locally
dioxus = { path = "../../dioxus" }
# dioxus = { version = "0.1.7" }
im-rc = { version = "15.0.0", features = ["serde"] }
log = "0.4.14"
